project/test/semantics/unit/good/Good07_shouldEvaluateAllOperatorsProperly.ty
singleton class Operators {
    
    actions: {
        main: () -> Bool = {
            val val1: Int = 3 * 3;
            val val2: Int = 5 * 4;
            val string1: String = "Something";
            val string2: String = "Some";
            val string3: String = string2 ++ "thing";
            val pred1: Bool = not (val1 > 6 and val1 <= 9); // False
            val pred2: Bool = (-val2 >= -15) or (string1 == string3); // True
            pred1 or pred2 // True
        }
    }
}
