project/test/semantics/unit/bad/input/Bad37_shouldThrowIllegalSideEffectsErrorInConstructorCalls.ty
mutable class TestClass {

    values: {
        total: Int;
        count: Int;
        name: String = "Some name";
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
        var3: String;
        var4: Bool;
    }
    
    functions: {
        goodFunction: () -> Int = 50
    }
    
    actions: {
        goodAction: (x: Int, y: String) -> Int = {
            val z: Int = 4;
            z
        }
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = {
            val testClass: TestClass = TestClass(3, 4 + if (True) {4} else {5}, "OK", False);
            // IllegalSideEffectsError
        }
    }
}
